--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "request-promise": "^4.2.1",
     "run-sequence": "~2.1.0",
     "serve-favicon": "~2.4.2",
+    "sha1": "^1.1.1",
     "socket.io": "~2.0.2",
     "tar-fs": "^1.15.3",
     "url": "^0.11.0",
